# ai-analyzer-service

./: .dockerignore  Dockerfile  Modelfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: celery_app.py  config.py  main.py  tasks.py
app/backend/: client_dep.py  db.py  db_depends.py
app/migrations/: env.py
app/migrations/versions/: 50167cd3e6c7_initial_migration.py  aa27b5964111_create_analyzed_docs_table.py  d92ca2b97576_initial_migration.py
app/models/: analyzed_doc.py
app/routers/: analyzer.py
app/schemas/: analyzer.py
app/services/: analyzer_service.py
tests/: test_ai.py
